--- a/springfox-bridge-core/pom.xml
+++ b/springfox-bridge-core/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
 	  <parent>
-		<groupId>com.github.doublebin.utils</groupId>
+		<groupId>com.github.double-bin</groupId>
 		<artifactId>springfox-bridge-parent</artifactId>
 		<version>1.0.0-SNAPSHOT</version>
 	  </parent>
