--- a/springfox-bridge-core/pom.xml
+++ b/springfox-bridge-core/pom.xml
@@ -12,7 +12,8 @@
 
     <artifactId>springfox-bridge-core</artifactId>
     <packaging>jar</packaging>
-	<!--<name>springfox-bridge</name>-->
+	<name>springfox-bridge-core</name>
+	<description>springfox-bridge-core</description>
 	
 	<dependencies>
 		<dependency>
