--- a/springfox-bridge-core/pom.xml
+++ b/springfox-bridge-core/pom.xml
@@ -7,7 +7,7 @@
 	  <parent>
 		<groupId>com.github.double-bin</groupId>
 		<artifactId>springfox-bridge-parent</artifactId>
-		<version>1.0.0-SNAPSHOT</version>
+		<version>1.0.0</version>
 	  </parent>
 
     <artifactId>springfox-bridge-core</artifactId>
