--- a/springfox-bridge-spring-boot-starter/pom.xml
+++ b/springfox-bridge-spring-boot-starter/pom.xml
@@ -7,7 +7,7 @@
     <parent>
         <groupId>com.github.double-bin</groupId>
         <artifactId>springfox-bridge-parent</artifactId>
-        <version>1.0.0-SNAPSHOT</version>
+        <version>1.0.0</version>
     </parent>
 
     <artifactId>springfox-bridge-spring-boot-starter</artifactId>
@@ -19,7 +19,7 @@
         <dependency>
             <groupId>com.github.double-bin</groupId>
             <artifactId>springfox-bridge-core</artifactId>
-            <version>1.0.0-SNAPSHOT</version>
+            <version>1.0.0</version>
         </dependency>
 
         <dependency>
