--- a/pom.xml
+++ b/pom.xml
@@ -5,11 +5,11 @@
 
     <groupId>com.github.double-bin</groupId>
     <artifactId>springfox-bridge-parent</artifactId>
-    <version>1.0.0</version>
+    <version>1.0.1-SNAPSHOT</version>
     <packaging>pom</packaging>
 
     <name>springfox-bridge-parent</name>
-    <description>springfox-bridge-parent</description>
+    <description>A plugin to create swagger documents for no restful apis in spring based applications.</description>
     <url>https://github.com/double-bin/springfox-bridge</url>
 
     <licenses>
@@ -34,7 +34,7 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <java.version>1.8</java.version>
-        <org.springframework.version>4.3.8.RELEASE</org.springframework.version>
+        <org.springframework.version>4.3.19.RELEASE</org.springframework.version>
     </properties>
 
     <modules>
@@ -109,7 +109,7 @@
             <dependency>
                 <groupId>com.fasterxml.jackson.core</groupId>
                 <artifactId>jackson-databind</artifactId>
-                <version>2.8.9</version>
+                <version>2.8.11.3</version>
             </dependency>
 
             <dependency>
