--- a/springfox-bridge-demo/pom.xml
+++ b/springfox-bridge-demo/pom.xml
@@ -7,7 +7,7 @@
     <parent>
         <groupId>com.github.double-bin</groupId>
         <artifactId>springfox-bridge-parent</artifactId>
-        <version>1.0.2-SNAPSHOT</version>
+        <version>1.0.2</version>
     </parent>
 
     <artifactId>springfox-bridge-demo</artifactId>
@@ -49,7 +49,7 @@
         <dependency>
             <groupId>com.github.double-bin</groupId>
             <artifactId>springfox-bridge-spring-boot-starter</artifactId>
-            <version>1.0.2-SNAPSHOT</version>
+            <version>${springfox-bridge.version}</version>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
