--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 
     <groupId>com.github.double-bin</groupId>
     <artifactId>springfox-bridge-parent</artifactId>
-    <version>1.0.2-SNAPSHOT</version>
+    <version>1.0.2</version>
     <packaging>pom</packaging>
 
     <name>springfox-bridge-parent</name>
@@ -36,6 +36,7 @@
         <java.version>1.8</java.version>
         <org.springframework.version>4.3.19.RELEASE</org.springframework.version>
         <springfox.version>2.7.0</springfox.version>
+        <springfox-bridge.version>1.0.2</springfox-bridge.version>
     </properties>
 
     <modules>
