--- a/springfox-bridge-spring-boot-starter/pom.xml
+++ b/springfox-bridge-spring-boot-starter/pom.xml
@@ -7,7 +7,7 @@
     <parent>
         <groupId>com.github.double-bin</groupId>
         <artifactId>springfox-bridge-parent</artifactId>
-        <version>1.0.2</version>
+        <version>1.0.3-SNAPSHOT</version>
     </parent>
 
     <artifactId>springfox-bridge-spring-boot-starter</artifactId>
